--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -169,7 +169,14 @@ button.btn.btn-outline-primary {
 }
 
 button.btn.btn-outline-primary:hover {
-    background-color: var(--primary-color);
+    background-color: white !important;
+    color: var(--primary-color) !important;
+    border-color: var(--primary-color) !important;
+}
+button.btn.btn-outline-primary:active {
+    background-color:  var(--primary-color) !important;
+    color: white !important;
+    border-color: var(--primary-color) !important;
 }
 
 .dropdown-toggle::after {
