--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -665,7 +665,7 @@ input[type="search"] {
     width: 100%;
     border-radius: 10px 10px 0px 0px;
     height: 250px;
-    background-image: url('/assests/images/cover.jpg'); /* background cover image*/
+    background-image: url('../assests/images/cover.jpg'); /* background cover image*/
     background-size: cover;
     background-position: center;
     position: relative;
