Fees,class,registeration form,sidebar, header, topbar

--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -820,3 +820,11 @@ button {
 .dropdown-menu .dropdown-item{
     font-size: 12px;
 }
+
+
+
+
+/* Registeration from */
+
+ /* Custom CSS */
+      
